# dapps-template-gear-academy

contracts/: Cargo.toml
contracts/01-tamagotchi/: Cargo.toml
contracts/01-tamagotchi/io/: Cargo.toml
contracts/01-tamagotchi/io/src/: lib.rs
contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/: Cargo.toml
contracts/02-tamagotchi-interaction/io/: Cargo.toml
contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/: Cargo.toml
contracts/03-tamagotchi-nft/io/: Cargo.toml
contracts/03-tamagotchi-nft/io/src/: lib.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
contracts/04-tamagotchi-shop/: Cargo.toml
contracts/04-tamagotchi-shop/io/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/05-tamagotchi-auto/: Cargo.toml
contracts/05-tamagotchi-auto/io/: Cargo.toml
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/06-tamagotchi-army/: Cargo.toml
contracts/06-tamagotchi-army/io/: Cargo.toml
contracts/06-tamagotchi-army/src/: lib.rs
contracts/07-tamagotchi-quest/: Cargo.toml  build.rs
contracts/07-tamagotchi-quest/io/: Cargo.toml
contracts/07-tamagotchi-quest/io/src/: lib.rs
contracts/07-tamagotchi-quest/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow-factory/: Cargo.toml
contracts/escrow-factory/io/: Cargo.toml
contracts/escrow-factory/io/src/: lib.rs
contracts/escrow-factory/src/: lib.rs
contracts/escrow/io/: Cargo.toml
contracts/escrow/io/src/: lib.rs
contracts/escrow/src/: lib.rs
contracts/escrow/state/: Cargo.toml  build.rs
