[package]
name = "tamagotchi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-io.workspace = true
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-io.workspace = true

[dev-dependencies]
gtest.workspace = true
