[package]
name = "tamagotchi-quest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-quest-io.workspace = true
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
sharded-fungible-token-io.workspace = true
store-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-quest-io.workspace = true

[dev-dependencies]
gtest.workspace = true
