[package]
name = "escrow"
homepage.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
scale-info = { version = "2", default-features = false }
escrow-io.workspace = true
parity-scale-codec = { version = "3", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["metawasm", "wasm-opt"] }
escrow-io.workspace = true

[dev-dependencies]
gtest.workspace = true