[package]
name = "escrow-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta = {  git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["codegen"] }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
escrow-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["metawasm", "wasm-opt"] }


